# Desafio-Analista-de-Dados-Sefaz-Macei-

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: analise_descritiva.ipynb  analise_exploratoria.ipynb
src/: config.py  main.py  pipeline.py  queries.py  query_descritiva.py  query_exploratoria.py
src/config/: ConexaoBanco.py  DataFrameConfig.py  Paths.py  grafico.py  logs.py
src/deflacao/: deflacao.py  ipca_utils.py
src/scripts/: extract.py  transform.py  validate.py
src/visualizacao/: bar_ranking_pagamento_divida.py  frequencia.py  graficos.py  linha_comparativo_cultura_per_capita.py  linha_comparativo_funcao_per_capita.py  linha_comparativo_tava_execucao.py  linha_evolucao_subfuncoes_cultura.py
tests/: test_extract.py  test_pipeline.py  test_transform.py  test_validate.py
